# ParentalControlP2P

./: README.md  proj.drawio
BlockingWeb/: BlockingWeb.sln  BlockingWeb.vcxproj  BlockingWeb.vcxproj.filters  blockingWeb.cpp
DockerWindowsService/: Dockerfile  register_service.bat
ParentalControlFINAL_PROJ/: Communicator.cpp  Communicator.h  IRequestHandler.h  ParentalControlFINAL_PROJ.sln  ParentalControlFINAL_PROJ.vcxproj  ParentalControlFINAL_PROJ.vcxproj.filters  RemoteControlingRequestHandler.cpp  RemoteControlingRequestHandler.h  Requsests.h  Responses.h  main.cpp
peers/: CMakeLists.txt  Communicator.cpp  Communicator.h  DTLS.cpp  DTLS.h  Deserializer.cpp  Deserializer.h  HashClass.cpp  HashClass.h  KeyUse.cpp  KeyUse.h  PRF.cpp  Requests.h  Responses.h  SHA256.cpp  SHA256.h  Serializer.cpp  Serializer.h  StunRequests.cpp  StunRequests.h  main.cpp  peers.sln  peers.vcxproj  peers.vcxproj.filters  sha256Intilize.cpp  ~AutoRecover.peers.vcxproj  ~AutoRecover.peers.vcxproj0  ~AutoRecover.peers.vcxproj1  ~AutoRecover.peers.vcxproj2
peers/crytopp/: cryptdll.vcxproj  cryptest.vcxproj  cryptlib.vcxproj  dlltest.vcxproj
rtp_transfer/: CMakeLists.txt  Comunication.cpp  Comunication.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  LiveImageDisplay.cpp  LiveImageDisplay.h  LockImage.cpp  LockImage.h  ScreenCapture.cpp  ScreenCapture.h  VP8-forImage.sln  VP8-forImage.vcxproj  VP8-forImage.vcxproj.filters  main.cpp  ~AutoRecover.VP8-forImage.vcxproj  ~AutoRecover.VP8-forImage.vcxproj0  ~AutoRecover.VP8-forImage.vcxproj4  ~AutoRecover.VP8-forImage.vcxproj5
(+65 files in other folders)
