#cmake_minimum_required(VERSION 3.10)
#project(peers)

# Specify the path to OpenSSL
#set(OPENSSL_ROOT_DIR "C:/Program Files/OpenSSL-Win64")
#include_directories("${OPENSSL_ROOT_DIR}/include")
#link_directories("${OPENSSL_ROOT_DIR}/lib")

# Find OpenSSL
#find_package(OpenSSL REQUIRED)

# Include all .cpp files in the current directory
#file(GLOB SOURCES "*.cpp")

# Create the executable
#add_executable(peers ${SOURCES})

# Link OpenSSL libraries
#target_link_libraries(peers OpenSSL::SSL OpenSSL::Crypto)
